Fix overflowing card style

--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -160,6 +160,7 @@ textarea:focus {
   border-radius: 8px;
   border: 1px solid rgb(224, 224, 224);
   box-shadow: rgba(0, 0, 0, 0.2) 0px 3px 5px 0px;
+  overflow: hidden;
 }
 
 .note-create-card-title {
